--- a/client/src/stylesheets/GlobalElements.module.css
+++ b/client/src/stylesheets/GlobalElements.module.css
@@ -70,3 +70,9 @@
     background-color: rgb(39, 120, 212);
     transition: background-color .3s;
 }
+
+.formWarning {
+    color: red;
+    font-size: .8rem;
+    padding-left: 5px;
+}
