RecipientTable component and RecipientsList container are working using test data

--- a/client/src/stylesheets/GlobalElements.module.css
+++ b/client/src/stylesheets/GlobalElements.module.css
@@ -21,6 +21,12 @@
     justify-content: space-evenly;
 }
 
+.flexOneOuterLeft {
+    composes: flexOneOuter;
+    margin-left: 0;
+    justify-content: left;
+}
+
 .flexOneInner {
     min-width: 300px;
     width: 500px;
